--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -1,41 +1,34 @@
-<div class="h-svh flex flex-col border-l-4 border-blue-500" data-chat-room-id="<%= @chat_room.id %>">
-
-    <div class=" bg-blue-100 flex-1 overflow-y-scroll">
-        <%if @chat_room.messages.any?%>
+<div class="h-screen flex flex-col border-l-4 border-blue-500" data-chat-room-id="<%= @chat_room.id %>">
+    <div class="bg-blue-100 flex-1 overflow-y-scroll">
+        <% if @chat_room.messages.any? %>
         <% @chat_room.messages.each do |message| %>
-        <%if message.user_id == current_user.id%>
+        <% next if message.content.blank? %>
+        <% if message.user_id == current_user.id %>
         <div class="px-4 py-2">
             <div class="flex items-center justify-end">
                 <div class="bg-blue-500 text-white rounded-lg p-2 shadow mr-2 max-w-sm">
-                    <p><%= message.content %></p>
+                    <p><%= h(message.content) %></p>
                 </div>
             </div>
         </div>
-
-        <%else %>
+        <% else %>
         <div class="px-4 py-2">
-            <div class="flex items-center mb-2">
-                <div class="font-medium">
-                    <%
-=begin%>
-                    <%message.user.name%>
-                    <%
-=end%>
-                </div>
-            </div>
             <div class="bg-white rounded-lg p-2 shadow mb-2 max-w-sm">
-                <%= message.content %>
+                <%= h(message.content) %>
             </div>
         </div>
         <% end %>
         <% end %>
-        <% end %>
-    </div>
-    <div class="bg-gray-100 px-4 py-2">
-        <%= form_with(model: [ @chat_room, @chat_room.messages.build ], class:"flex items-center", url: chat_room_messages_path(@chat_room), local: true) do |form| %>
-        <%= form.text_area :content, placeholder: "Type your message here...", class:"w-full border rounded-full py-2 px-4 mr-2"%>
-        <%= form.submit "Send", class:"bg-blue-500 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-full" %>
+        <% else %>
+        <div class="text-center text-gray-500 py-4">No messages yet.</div>
         <% end %>
 
+    </div>
+
+    <div class="bg-gray-100 px-4 py-2">
+        <%= form_with(model: [@chat_room, @chat_room.messages.build], class: "flex items-center", url: chat_room_messages_path(@chat_room), local: true) do |form| %>
+        <%= form.text_area :content, placeholder: "Type your message here...", class: "w-full border rounded-full py-2 px-4 mr-2", required: true %>
+        <%= form.submit "Send", class: "bg-blue-500 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-full" %>
+        <% end %>
     </div>
 </div>
